# linkualog

./: .dockerignore  .env.domain.example  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  deploy-domain.sh  deploy.sh  docker-compose.domain.yml  docker-compose.yml
.github/workflows/: deploy.yml
assets/: workflow.excalidraw
browser-plugin/dev/: package-lock.json  package.json  tsconfig.json  vite.config.ts
browser-plugin/user/: linkualog.user.js
data/cet/: abandon.json  acclaim.json  acclaimed.json  breed.json  (+155 more)
knotodo/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
master-server/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.docker.txt
master-server/dev/: main.py  pyproject.toml
master-server/dev/api/: routes.py
master-server/dev/core/: config.py  storage.py  tasks.py  vocabulary.py
master-server/dev/experiments/: server.py
master-server/dev/frontend/: package-lock.json
master-server/dev/frontend/src/: App.css  App.jsx  index.css
master-server/dev/frontend/src/api/: client.js
master-server/dev/frontend/src/components/: ConfigForm.jsx  ImageUploader.jsx  TaskVisualizer.jsx  VocabQueueWidget.jsx  VocabularyReview.jsx
master-server/dev/services/: llm.py
master-server/dev/utils/: runner.py
qq-bot/: .dockerignore  .env.local.example  Dockerfile  README.md  main.py  pyproject.toml  review_teaching.py
review-agent/: Dockerfile
static-website/: Makefile  README.md  main.py  pyproject.toml  zensical.toml
website-template/: Makefile  main.py  pyproject.toml  zensical.toml
(+894 files in other folders)
