[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "filelock>=3.25.2",
    "fitz>=0.0.1.dev2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "pdf2image>=1.17.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
]
